<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:orientation="vertical"
    android:focusable="true" android:focusableInTouchMode="true" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_ble_frag_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Base.DialogWindowTitle.AppCompat"/>

            <TextView
                android:id="@+id/tv_opcode_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/ble_frag_op_code_message"
                android:textStyle="bold"
                android:visibility="gone"/>

            <Spinner
                android:id="@+id/sp_op_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:visibility="gone"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/ti_action_delay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_action_delay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_marginTop="10dp"
                    android:hint="@string/action_delay"
                    android:text="@string/action_delay_default"
                    android:inputType="number"
                    style="@style/EditTextHintStyle"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/ti_identity_mode_duration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/et_identity_mode_duration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_marginTop="10dp"
                    android:hint="@string/identification_duration"
                    android:text="@string/connection_duration_default"
                    android:inputType="number"
                    style="@style/EditTextHintStyle"/>
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/tv_next_mode_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/ble_frag_state_of_failure_message"
                android:visibility="gone"
                android:textStyle="bold"/>

            <Spinner
                android:id="@+id/sp_next_mode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:visibility="gone"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/ti_device_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/et_ble_label"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:hint="@string/identity_data"
                    android:inputType="text"
                    android:layout_marginTop="10dp"
                    android:maxLength="@string/identity_data_length"
                    style="@style/EditTextHintStyle"
                    android:visibility="gone"/>
            </android.support.design.widget.TextInputLayout>

            <CheckBox
                android:id="@+id/chk_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_configuration"
                android:layout_marginTop="10dp"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>