<?xml version="1.0" encoding="UTF-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:minWidth="400dp"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="6dp" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:drawablePadding="15dp"
            android:padding="5dp"
            android:text="@string/about_text" />

        <TextView
            android:id="@+id/version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:gravity="center_horizontal" >

            <ImageView
                android:id="@+id/action_facebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/action_facebook"
                android:src="@drawable/ic_facebook" />

            <ImageView
                android:id="@+id/action_twitter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:contentDescription="@string/action_twitter"
                android:src="@drawable/ic_twitter" />

            <ImageView
                android:id="@+id/action_linkedin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:contentDescription="@string/action_linkedin"
                android:src="@drawable/ic_linkedin" />

            <ImageView
                android:id="@+id/action_youtube"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:contentDescription="@string/action_youtube"
                android:src="@drawable/ic_youtube" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>