<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.rosterloh.moodring.wifi.WifiFragmentAddManually"
    android:padding="@dimen/dialog_padding"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/ti_ssid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/et_ssid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ssid"
            android:inputType="text"
            style="@style/EditTextHintStyle"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/ti_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/wifi_password"
            android:inputType="textPassword"
            style="@style/EditTextHintStyle"/>

    </android.support.design.widget.TextInputLayout>

    <CheckBox
        android:id="@+id/chk_view_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/view_password"/>

    <CheckBox
        android:id="@+id/chk_default"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/set_default_router"/>

</LinearLayout>