<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <Spinner
        android:id="@+id/wifi_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </Spinner>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/ti_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/et_wifi_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/wifi_password"
            android:inputType="textPassword"
            style="@style/EditTextHintStyle"/>
    </android.support.design.widget.TextInputLayout>

    <CheckBox
        android:id="@+id/chk_view_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_password"/>

    <CheckBox
        android:id="@+id/chk_default"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_default_router"/>

</LinearLayout>