<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_wifi_configure"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rosterloh.moodring.wifi.ConfigureWifiActivity"
    android:orientation="vertical">

    <include layout="@layout/toolbar"
        android:id="@+id/app_bar"/>

    <LinearLayout
        android:id="@+id/layout_wifi_content"
        android:layout_below="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvDefaultRouterTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_default_wifi"
            style="@style/titleText"
            android:paddingTop="8dp"
            android:paddingStart="?android:attr/listPreferredItemPaddingStart"/>

        <TextView
            android:id="@+id/tv_no_default_wifi"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:gravity="center_vertical"
            android:visibility="visible"
            android:textAppearance="?android:attr/textAppearanceListItemSmall"
            android:paddingStart="?android:attr/listPreferredItemPaddingStart"
            android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
            android:minHeight="?android:attr/listPreferredItemHeight"
            android:text="@string/no_default_wifi"
            android:textColor="@color/textColorSecondary"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/defaultList"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:visibility="gone"
            android:paddingStart="?android:attr/listPreferredItemPaddingStart">
        </android.support.v7.widget.RecyclerView>

        <TextView
            android:id="@+id/tvOtherRouterTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/other_wifi"
            style="@style/titleText"
            android:paddingTop="8dp"
            android:paddingStart="?android:attr/listPreferredItemPaddingStart"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/otherlist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="?android:attr/listPreferredItemPaddingStart">
        </android.support.v7.widget.RecyclerView>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layout_no_wifi"
        android:layout_below="@+id/layout_wifi_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/no_wifi"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textSize="20sp"
            android:gravity="center"
            android:text="@string/no_wifi_configured"/>
    </RelativeLayout>

</RelativeLayout>